--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tanstack/react-query": "^5.21.5",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "lucide-react": "^0.397.0",
+    "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
@@ -26,11 +26,13 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.5.1",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -38,8 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.4",
-    "@netlify/functions": "^2.5.1"
+    "typescript": "^5.9.3",
+    "vite": "^5.1.4"
   }
 }
