--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,12 +3,13 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "allowSyntheticDefaultImports": true,
-    "strict": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "types": ["node"]
+    "strict": true,
+    "noEmit": true,
+    "skipLibCheck": true
   },
-  "include": ["vite.config.ts", "netlify/functions"]
+  "include": ["vite.config.ts", "netlify/functions/**/*.ts"]
 }
